--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ description-file = README.md
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = xicam/_version.py
+versionfile_source = xicam/saxs/_version.py
 versionfile_build =
 tag_prefix =
 
